--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "downlevelIteration": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "allowJs": true,
     "strict": true,
     "module": "esnext",
     "moduleResolution": "bundler",
@@ -11,6 +15,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "plugins": [{ "name": "next" }]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
