--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
+    "@types/node": "^24.9.1",
     "@types/react": "19.2.2",
     "autoprefixer": "10.4.19",
     "dotenv": "^17.2.3",
