feat: implement role-based home pages with comprehensive navigation system
Created dedicated home pages for each user role (Searcher, Owner, Resident) that serve as the primary landing page after onboarding/login. The dashboard is now accessible via a button from each home page.

## New Home Pages

### Searcher Home Page (/home/searcher)
- Welcome header with personalized greeting
- Location-based search bar with quick search functionality
- Quick stats: Saved Properties, Active Chats, Potential Matches, Group Invites
- Two main action cards:
  - "Find Your Coliving Squad" (purple gradient) → Matching system
  - "Browse Properties" (mustard gradient) → Property listings
- Quick access bar: Favorites, Messages, Calendar, Profile
- Recent activity feed: Likes, property matches, group invitations
- Profile completion Pro Tip card with progress indicator
- Floating action button (FAB) for quick matching access
- Dashboard button in header

### Owner Home Page (/home/owner)
- Professional "Investment Dashboard" header
- KPI cards with gradients and trend indicators:
  - Total Revenue (mustard gradient)
  - Total Expenses (red gradient)
  - Net Profit (green gradient)
  - Occupancy Rate (blue gradient)
- Quick action cards (4 gradient cards):
  - My Properties (blue)
  - Finance Report (green)
  - Applications (orange, with badge count)
  - Maintenance (purple, with badge count)
- Applications pipeline status overview (New, Interview, Visit, Approved, Rejected)
- Recent activity feed with color-coded icons
- "Add Expense" prominent button in header
- Dashboard button in header

### Resident Home Page (/home/resident)
- Friendly greeting based on time of day
- Quick stats: Residents Count, Pending Expenses, Tasks, Community Happiness
- Current coliving property hero card:
  - Property photo with gradient overlay
  - Room number badge
  - Move-in and contract end dates
  - Roommates section with avatars and online status
  - "Invite Roommate" button → Matching system
  - Am

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "property:list": "tsx scripts/list-all-properties.ts"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-progress": "^1.1.7",
     "@sentry/nextjs": "^10.22.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.45.4",
